@@ -1,3 +1,9 @@
+2004-02-06  Rodney Dawes  <dobey@ximian.com>
+
+	* e-shell-window-commands.c (command_quick_reference): Really make
+	this work with gnome-vfs 2.2, instead of using gnome-vfs 2.4 api,
+	fixes #53566 more completely so snapshots can build again (doh)
+
 2004-02-06  JP Rosevear <jpr@ximian.com>
 
 	* importer/import.glade: remove step numbers
